# claudoctor

./: README.md  pyproject.toml
.ike/: ike.json
.ike/documents/: DOC-0001 - check-catalog-v1.md
.ike/milestones/: MS-0001 - m1-research-what-to-check-and-how.md  MS-0002 - m2-core-engine-first-checks.md  MS-0003 - m3-full-catalog-auto-fix-pypi.md
.ike/tasks/: TASK-0001 - audit-claude-structure-map-every-file-claude-code-.md  TASK-0002 - audit-project-level-claude-claude-md-mcp-json-skil.md  TASK-0003 - research-mcp-server-health-detection-how-to-probe-.md  TASK-0004 - research-claude-md-token-budget-how-big-is-too-big.md  TASK-0005 - research-existing-claude-code-diagnostic-tools-pri.md  TASK-0006 - research-permissions-allow-patterns-what-approval-.md  TASK-0007 - define-severity-model-and-output-format.md  TASK-0008 - decide-python-cli-vs-node-cli-vs-shell-script.md  TASK-0009 - scaffold-python-cli-pyproject-toml-click-entry-poi.md  TASK-0010 - build-check-engine-runner-registry-finding-model-o.md  TASK-0011 - implement-section-installation-install-001-through.md  TASK-0012 - implement-section-authentication-auth-001-through-.md  TASK-0013 - implement-section-project-root-project-001-through.md  TASK-0014 - implement-section-settings-settings-001-through-00.md  TASK-0015 - implement-section-permissions-perms-001-through-00.md  TASK-0016 - implement-section-claude-md-quality-claudemd-001-t.md  TASK-0017 - implement-section-mcp-servers-mcp-001-through-014.md  (+4 more)
.research/: research.json
.visionlog/: config.yaml  vision.md
src/claudoctor/: __init__.py  cli.py  (+4 more)
(+57 files in other folders)
