[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudoctor"
version = "0.1.0"
description = "The definitive diagnostic tool for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Eidos AGI", email = "daniel@eidosagi.com" },
]
keywords = ["claude", "claude-code", "diagnostic", "health-check", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.0",
]

[project.scripts]
claudoctor = "claudoctor.cli:main"

[project.urls]
Homepage = "https://github.com/eidos-agi/claudoctor"
Repository = "https://github.com/eidos-agi/claudoctor"
Issues = "https://github.com/eidos-agi/claudoctor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claudoctor"]

[tool.ruff]
target-version = "py310"
line-length = 100
